# jupyter-ai

./: .gitignore  .gitmodules  .jupyter-releaser.toml  .pre-commit-config.yaml  .readthedocs.yaml  .yarnrc.yml  AGENTS.md  CHANGELOG.md  DEVELOP.md  LICENSE  README.md  bigcode-zh.md  conftest.py  dev-environment.yml  errorhandle_prompt.cfg  lerna.json  nx.json  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: check-release.yml  docs-build.yml  e2e-tests.yml  enforce-label.yml  lint.yml  prep-release-docs.yml  prep-release.yml  publish-release.yml  pull_request_template.md  tests.yml  unit-tests.yml  update-snapshots.yml  update-submodule-docs.yml
builds/: README.md
builds/clean/: jupyter_ai_clean.ipynb  jupyter_ai_magics-2.2.12-py3-none-any.whl  jupyter_ai_magics-2.2.13-py3-none-any.whl  jupyter_ai_magics-2.2.17-py3-none-any.whl
builds/enhanced/: jupyter_ai.ipynb  jupyter_ai_magics-2.2.10-py3-none-any.whl
docs/: requirements.txt
docs/source/: conf.py  getting-started.md  index.md  index.rst
docs/source/_ext/: autodoc_subpackages.py  subpackage_docs.py
docs/source/_static/css/: custom.css
docs/source/_templates/: HERO-ICON-README.md  hero-icon.html  simple-hero-icon.html
docs/source/_templates/partials/: site-foot.html
docs/source/contributors/: .gitignore  index.md
docs/source/developers/: .gitignore  index.md  inline_completions.md
docs/source/developers/entry_points_api/: embeddings_providers_group.md  index.md  model_providers_group.md  personas_group.md  personas_tutorial_example.md  providing_entry_points.md
docs/source/examples/: code.nblink  commands.nblink  errors.nblink  images.nblink  index.md  magics.nblink  sagemaker.nblink
docs/source/examples/generate/: Creating Random Arrays with Numpy.nblink  Introduction to Sets.nblink  index.md
docs/source/proposals/: index.md  jupyter-ai-3.1.md  jupyter-ai-3.2.md  persona-api-v0.1.md
docs/source/releases/: index.md  v3.1.0.md
docs/source/roadmap/: index.md  jupyter-ai-3.1.md  jupyter-ai-3.2.md
docs/source/roadmap/completed/: index.md  jupyter-ai-3.1.md
docs/source/users/: bedrock.md  getting-started.md  index.md  local-models.md  openrouter.md  tools.md  troubleshooting.md  versioning.md  vllm.md
docs/source/users/jupyternaut/: bedrock.md  index.md  vllm.md
docs/source/users/magic_commands/: index.md
docs/tests/: conftest.py  test_release_notes.py  test_subpackage_docs.py
examples/: RemoteMemory.ipynb  code.ipynb  commands.ipynb  errors.ipynb  images.ipynb  magics.ipynb  ray1.ipynb  sagemaker.ipynb
examples/autonotebook/: Python Sets Tutorial.ipynb
examples/code-completion/: sklearn_digits.ipynb
examples/generate/: Creating Random Arrays with Numpy.ipynb  Introduction to Sets.ipynb  Training Dense Neural Network with PyTorch.ipynb  Training a Dense Neural Network with PyTorch.ipynb
jupyter_ai/: __init__.py  _version.py
playground/: README.md  config.example.py
scripts/: _resolve_doc_submodules.py  _submodule_versions.py  bump-version.py  bump-version.sh  ci-setup.sh  dev-setup.sh  freeze-doc-submodules.sh  generate_release_notes.py  install.sh  rtd-post-checkout.sh  test_submodule_versions.py  update-doc-submodules.sh
submodules/: manifest.json
ui-tests/: README.md
ui-tests/tests/: jupyter-ai.spec.ts
ui-tests/tests/helpers/: AIHelper.ts
